--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>nohttp-checkstyle</artifactId>
             <version>${nohttp-checkstyle.version}</version>
           </dependency>
+          <dependency>
+    	      <groupId>org.apache.logging.log4j</groupId>
+    	      <artifactId>log4j-core</artifactId>
+    	      <version>2.12.4</version>
+	        </dependency>
         </dependencies>
         <executions>
           <execution>
